# sol-mtree

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml
client/: Cargo.toml
client/src/: lib.rs  main.rs
clients/js/: README.md  package.json
clients/js/test/: increment.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: assertions.rs  entrypoint.rs  error.rs  events.rs  info.rs  instruction.rs  lib.rs  processor.rs  tree.rs  utils.rs
program/src/mtree/: mod.rs  path.rs  sub_tree.rs
program/tests/: mtree.rs
scripts/: generate-clients.mjs
