[workspace]
members = ["client", "program"]
resolver = "2"

[workspace.metadata.cli]
solana = "1.18.14"

[workspace.metadata.toolchains]
format = "1.86.0"
lint = "1.86.0"

[workspace.dependencies]
solana-program-mtree = {path = "program"}

borsh = "^0.10"
eyre = "0.6.12"
hex = "^0.4"
serde = "^1.0"

clap = "4.5.37"
serde_json = "1.0.140"
solana-cli-config = "2.2.7"
solana-client = "2.2.7"
solana-program = "2.2.1"
solana-program-test = "2.2.7"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
thiserror = "^1.0"
tokio = "^1.0"
