[package]
name = "client"

edition = "2021"
version = "0.1.0"

[dependencies]
borsh.workspace = true
eyre.workspace = true
solana-client.workspace = true
solana-program-mtree = {workspace = true, features = ["no-entrypoint"]}
solana-program.workspace = true
solana-sdk.workspace = true
hex.workspace = true
solana-transaction-status.workspace = true
clap = {workspace = true, features = ["derive"]}
solana-cli-config.workspace = true
serde_json.workspace = true
