[package]
name = "solana-program-mtree"

edition = "2021"
publish = false

[package.metadata.solana]
account-dependencies = []
program-dependencies = []
program-id = "5btvfbzMrGv3WB4h47NXpophMLKqGEEDwGDQgkr8PMF2"

[features]
default = ["encode"]
encode = []
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
num-derive.workspace = true
num-traits.workspace = true
solana-program.workspace = true
thiserror.workspace = true
hex.workspace = true
