[package]
name = "solana-program-mtree"

edition = "2021"
publish = false

[package.metadata.solana]
account-dependencies = []
program-dependencies = []
program-id = "5btvfbzMrGv3WB4h47NXpophMLKqGEEDwGDQgkr8PMF2"

[features]
default = ["encode", "decode-event"]

decode-event = []
encode = []
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
hex.workspace = true
solana-program.workspace = true
thiserror.workspace = true

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
tokio = {workspace = true, features = ["full"]}
